2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Check for ‘alloca’ support at configure time.

	* configure.ac (AC_FUNC_ALLOCA): New macro call.

2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Re-enable dependency tracking support in Automake.

	This undoes 2011-07-21, "Disable dependency tracking support in
	Automake by default", a misguided premature optimization.

	* configure.ac (AM_INIT_AUTOMAKE): Remove ‘no-dependencies’.

2011-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use snuggle.m4 more.

	* build-aux/snuggle.m4: New file.
	* configure.ac: Do ‘s/GUILE_PROGS/SNUGGLE_PROGS/’,
	‘s/GUILE_FLAGS/SNUGGLE_FLAGS/’,
	‘s/DETERMINE_GUILE_LIBSITE_DIR/SNUGGLE_GUILE_LIBSITE_DIR/’,
	‘s/GUILE_TOOLS_EXISTSP/SNUGGLE_GUILE_TOOLS_EXISTSP/’.
	* build-aux/determine-guile-libsite-dir.m4: Delete file.
	* build-aux/guile-tools-existsp.m4: Likewise.

2011-07-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Bump Automake required version to 1.11.1.

	* configure.ac (AM_INIT_AUTOMAKE): Specify "1.11.1".

2011-08-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Use @uref more.

	* doc/guile-pg.texi (Top): Use @uref instead of @url.

2011-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Disable dependency tracking support in Automake by default.

	* configure.ac (AM_INIT_AUTOMAKE): Add ‘no-dependencies’.

2011-07-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Use ‘GUILE_TOOLS_EXISTSP’.

	* build-aux/guile-tools-existsp.m4: New file.
	* configure.ac: Use ‘GUILE_TOOLS_EXISTSP’.

2011-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Use ‘DETERMINE_GUILE_LIBSITE_DIR’.

	* build-aux/determine-guile-libsite-dir.m4: New file.
	* configure.ac: Use ‘DETERMINE_GUILE_LIBSITE_DIR’.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Portability fix: Avoid ‘string-append’ on symbols.

	* doc/mkinc (fln): Delete proc; import ‘write-line’ as alias, instead.
	(pp-ls): Convert the blurb to a string before passing to ‘fln’.
