@@ -995,6 +995,35 @@ known prosaically as @dfn{quoting}.
 @tsin i sql-quote
 @tsin i idquote
 
+@section Standard Conforming Strings
+
+Starting with PostgreSQL 8.x, there is a configuration file and runtime
+parameter @code{standard_conforming_strings} that controls how strictly the
+server parses SQL string syntax.  When its value is @code{on}, strings that
+include the @samp{\} (backslash) character must be prefixed with @samp{E}.
+Even when it is off, the server may emit a warning, anyway.  To avoid such
+unpleasantness, Guile-PG provides @code{sql-quote-auto-E?}.
+
+@findex sql-quote-auto-E?
+@tsin i sql-quote-auto-E?
+
+@noindent
+The typical way to use this is to set the fluid soon after you make the
+connection and forget about it:
+
+@example
+(and (pg-parameter-status CONN 'standard_conforming_strings)
+     ;; Don't bother checking the parameter value;
+     ;; enable functionality unconditionally.
+     (fluid-set! sql-quote-auto-E? #t))
+@end example
+
+@noindent
+This can get hairy if you maintain more than one connection at a time to
+servers with mixed support for @code{standard_conforming_strings}, however
+(i.e., pre-8.x and 8.x together).  In that case, it is better to use
+@code{with-fluids} to enable the functionality completely dynamically.
+
 @c ---------------------------------------------------------------------------
 @node qcons trees
 @section Tree Construction
