@@ -1,5 +1,13 @@
 2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	New (database postgres-qcons) fluid: sql-quote-auto-E?
+
+	* postgres-qcons.scm (sql-quote-auto-E?): New fluid, exported.
+	(sql-quote): If ‘sql-quote-auto-E?’ is non-‘#f’ and there
+	are one or more backslashes in the string, prefix an "E".
+
+2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[scheme int] Use ‘zero?’ more.
 
 	* postgres-gxrepl.scm (gxrepl -read): Use ‘zero?’.
